--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -66,7 +66,12 @@ collections:
           - { label: Name, name: name, widget: string }
           - { label: Author, name: author, widget: string }
           - { label: URL, name: url, widget: string }
-          - { label: Meta Tags, name: meta_tags, widget: list, allow_add: true, collapsed: true, fields: 
-            - { label: Name, name: text, widget: string}
+          - label: Meta Tags 
+            name: meta_tags 
+            widget: list
+            allow_add: true
+            collapsed: true 
+            fields: 
+            - { label: Name, name: text, widget: string},
             - { label: Meta Code, name: meta_code, widget: string, patttern: ['^<.*>$', "Must be a valid Meta Tag"]}
-          }
+          
