--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -63,9 +63,15 @@ collections:
         name: "settings"
         file: "src/_data/settings.yaml"
         fields:
-          - { label: Name, name: name, widget: string }
-          - { label: Author, name: author, widget: string }
-          - { label: URL, name: url, widget: string }
+          - label: Name
+            name: name
+            widget: string
+          - label: Author
+            name: author
+            widget: string
+          - label: Url
+            name: url
+            widget: string
           - label: Meta Tags 
             name: meta_tags 
             widget: list
