--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -1,7 +1,7 @@
 ---
-name: Neat Starter
-author: Surjith S M
-url: "https://surjithctly.in/"
+name: Zyroz Blog
+author: Zyroz
+url: "https://zyroz.studio"
 meta_tags:
   - text: Google Font
     meta_code: <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
