--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -1,9 +1,15 @@
----
 name: Zyroz Blog
 author: Zyroz
-url: "https://zyroz.studio"
+url: https://zyroz.studio
 meta_tags:
   - text: Google Font
-    meta_code: <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
+    meta_code: <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap"
+      rel="stylesheet">
   - text: Google Font 2
-    meta_code: <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
+    meta_code: <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap"
+      rel="stylesheet">
+  - text: "Test "
+    meta_code: <link rel="stylesheet" type="text/css"
+      href="/static/css/prism-tomorrow.css">
