Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -5,3 +5,6 @@ links:
   - title: Github
     url: https://github.com/ZYR0Z/
     desc: My Github page, if you are interested in my projects
+  - title: Posts
+    url: /blog/
+    desc: Read our most recent Blog Posts!
